// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering of the Indicator checks if component renders 1`] = `
<DocumentFragment>
  <li
    data-cy="indicatorBox"
    data-testid="indicator-box"
  >
    <div>
      <div>
        some label
        <div>
          some description
        </div>
      </div>
      <div>
        <div>
          <div>
            <span>
              97
            </span>
          </div>
          <div>
            <img
              alt="an icon for the up arrow"
              src="test-file-stub"
            />
          </div>
        </div>
        <div>
          <div>
            above 
            <span>
              20
            </span>
             percent
          </div>
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`test rendering of Indicator value icons renders the down arrow when the value is above the threshold 1`] = `
<DocumentFragment>
  <img
    alt="an icon for the down arrow"
    src="test-file-stub"
  />
</DocumentFragment>
`;

exports[`test rendering of Indicator value icons renders the down arrow when the value is zero 1`] = `
<DocumentFragment>
  <img
    alt="an icon for the down arrow"
    src="test-file-stub"
  />
</DocumentFragment>
`;

exports[`test rendering of Indicator value icons renders the unavailable icon when the value is null 1`] = `
<DocumentFragment>
  <img
    alt="an icon to represent data is unavailable"
    src="test-file-stub"
  />
</DocumentFragment>
`;

exports[`test rendering of Indicator value icons renders the up arrow when value is above threshold 1`] = `
<DocumentFragment>
  <img
    alt="an icon for the up arrow"
    src="test-file-stub"
  />
</DocumentFragment>
`;

exports[`test rendering of Indicator value sub-text renders the "above 90 percentile" 1`] = `
<DocumentFragment>
  <div>
    above 90
    <sup
      style="top: -0.2em;"
    >
      th
    </sup>
     percentile
  </div>
</DocumentFragment>
`;

exports[`test rendering of Indicator value sub-text renders the "below 90 percentile" 1`] = `
<DocumentFragment>
  <div>
    below 90
    <sup
      style="top: -0.2em;"
    >
      th
    </sup>
     percentile
  </div>
</DocumentFragment>
`;

exports[`test rendering of Indicator value sub-text renders the "data is not available" 1`] = `
<DocumentFragment>
  <div>
    data is not available
  </div>
</DocumentFragment>
`;

exports[`test that the unit suffix renders correctly renders correctly when the value is a null 1`] = `<DocumentFragment />`;

exports[`test that the unit suffix renders correctly renders correctly when the value is a percent 1`] = `
<DocumentFragment>
  <span>
    90
  </span>
</DocumentFragment>
`;

exports[`test that the unit suffix renders correctly renders correctly when the value is a percentile 1`] = `
<DocumentFragment>
  90
  <sup
    style="top: -0.2em;"
  >
    th
  </sup>
</DocumentFragment>
`;
